--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Marriage -- Humor'
 - !lcsh 'Women -- Humor'
 - !lcsh 'Men -- Humor'
+- GITenberg
 title: 'A Guide to Men: Being Encore Reflections of a Bachelor Girl'
 url: http://www.gutenberg.org/ebooks/30630
